# freebsd-embedded-hal

./: .rustfmt.toml  Cargo.toml  README.md
examples/: mcp.rs
src/: gpio.rs  i2c.rs  lib.rs
